[gd_scene load_steps=15 format=3 uid="uid://gutl1uw80tyh"]

[ext_resource type="Texture2D" uid="uid://drbqt2ouydoen" path="res://images/battle-stage.png" id="1_6cgca"]
[ext_resource type="Script" uid="uid://b25ub0u5rq3cu" path="res://scenes/test_files/battle_prototype.gd" id="1_cyiub"]
[ext_resource type="Texture2D" uid="uid://7johx0ys72cs" path="res://images/enemy-warrior.png" id="2_0s860"]
[ext_resource type="Script" uid="uid://bq322hnxonaxc" path="res://scenes/test_files/player_actions.gd" id="3_vcnw4"]
[ext_resource type="Texture2D" uid="uid://cb8alcoyeewrf" path="res://images/shield-cropped.png" id="4_vwesj"]
[ext_resource type="Texture2D" uid="uid://dd6tnr6mrbmgi" path="res://images/sword-cropped.png" id="5_e4dlj"]

[sub_resource type="Animation" id="Animation_cyiub"]
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-178, 537)]
}

[sub_resource type="Animation" id="Animation_e4dlj"]
resource_name = "slide_in"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-178, 537), Vector2(147, 537)]
}

[sub_resource type="Animation" id="Animation_bwcvr"]
resource_name = "slide_out"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(147, 537), Vector2(-178, 537)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b5d7x"]
_data = {
&"RESET": SubResource("Animation_cyiub"),
&"slide_in": SubResource("Animation_e4dlj"),
&"slide_out": SubResource("Animation_bwcvr")
}

[sub_resource type="Animation" id="Animation_a5gbd"]
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-184, 441)]
}

[sub_resource type="Animation" id="Animation_b5d7x"]
resource_name = "slide_in"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-184, 441), Vector2(172, 441)]
}

[sub_resource type="Animation" id="Animation_khbdf"]
resource_name = "slide_out"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(172, 441), Vector2(-184, 441)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_khbdf"]
_data = {
&"RESET": SubResource("Animation_a5gbd"),
&"slide_in": SubResource("Animation_b5d7x"),
&"slide_out": SubResource("Animation_khbdf")
}

[node name="BattlePrototype" type="Node2D"]
script = ExtResource("1_cyiub")

[node name="Battle-stage" type="Sprite2D" parent="."]
position = Vector2(638, 441)
scale = Vector2(0.921875, 0.921875)
texture = ExtResource("1_6cgca")
metadata/_edit_lock_ = true

[node name="Warrior" type="Sprite2D" parent="."]
position = Vector2(825, 386)
scale = Vector2(0.334961, 0.334961)
texture = ExtResource("2_0s860")

[node name="PlayerActions" type="Node2D" parent="."]
script = ExtResource("3_vcnw4")

[node name="Attack" type="Button" parent="PlayerActions"]
offset_left = 453.0
offset_top = 625.0
offset_right = 574.0
offset_bottom = 691.0
text = "ATTACK"

[node name="Defence" type="Button" parent="PlayerActions"]
offset_left = 595.0
offset_top = 625.0
offset_right = 716.0
offset_bottom = 691.0
text = "DEFENCE"

[node name="Shield-cropped" type="Sprite2D" parent="."]
position = Vector2(-178, 537)
scale = Vector2(0.117735, 0.117735)
texture = ExtResource("4_vwesj")

[node name="shield_animations" type="AnimationPlayer" parent="Shield-cropped"]
libraries = {
&"": SubResource("AnimationLibrary_b5d7x")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Shield-cropped"]
position = Vector2(4.24683, -15.2405)
scale = Vector2(144.817, 173.096)
metadata/_edit_lock_ = true

[node name="Sword-cropped" type="Sprite2D" parent="."]
position = Vector2(-184, 441)
scale = Vector2(0.148341, 0.148341)
texture = ExtResource("5_e4dlj")

[node name="sword_animations" type="AnimationPlayer" parent="Sword-cropped"]
libraries = {
&"": SubResource("AnimationLibrary_khbdf")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Sword-cropped"]
position = Vector2(6.10352e-05, -16.853)
scale = Vector2(97.7477, 196.507)
metadata/_edit_lock_ = true

[connection signal="mouse_entered" from="PlayerActions/Attack" to="PlayerActions" method="_on_attack_mouse_entered"]
[connection signal="mouse_exited" from="PlayerActions/Attack" to="PlayerActions" method="_on_attack_mouse_exited"]
[connection signal="mouse_entered" from="PlayerActions/Defence" to="PlayerActions" method="_on_defence_mouse_entered"]
[connection signal="mouse_exited" from="PlayerActions/Defence" to="PlayerActions" method="_on_defence_mouse_exited"]
